syntax = "proto3";

package control;
import "common.proto";
import "tunnel.proto";

enum Os {
  OS_UNSPECIFIED = 0;
  OS_LINUX = 1;
  OS_WINDOWS = 2;
  OS_MAC = 3;
}

enum Bitness {
  BITNESS_UNSPECIFIED = 0;
  BITNESS_B32 = 1;
  BITNESS_B64 = 2;
}

enum Endianness {
  ENDIANNESS_UNSPECIFIED = 0;
  ENDIANNESS_BIG = 1;
  ENDIANNESS_LITTLE = 2;
}

enum Architecture {
  ARCHITECTURE_UNSPECIFIED = 0;
  ARCHITECTURE_X86 = 1;
  ARCHITECTURE_ARM = 2;
}

message ClientInfo {
  common.SemVer version = 1;
  string build_id = 2;
  Os os = 3;
  string os_version = 4;
  string ssl_library = 5;
  string ssl_version = 6;
  Bitness bitness = 7;
  Endianness endianness = 8;
  Architecture architecture = 9;
  string cpu_id = 10;
  uint64 number_of_cores = 11;
  string amount_of_ram = 12;
  common.Dimension display_size = 13;
}

message ClientInit {
  string auth_token = 1;
  ClientInfo client_info = 2;
  common.ClientCaps client_caps = 3;
  uint32 max_decoder_count = 4;
  string client_specified_program_cmdline = 5;
  uint32 mbps_max = 6;
  bool is_caps_locked = 7;
  bool is_num_locked = 8;
  bool is_scroll_locked = 9;
  map<uint64, tunnel.Description> tunnel_requests = 10;
}

enum ClientGoodbyeReason {
  CLIENT_GOODBYE_UNSPECIFIED = 0;
  CLIENT_GOODBYE_REASON_USER_REQUESTED = 1;
  CLIENT_GOODBYE_REASON_NETWORK_ERROR = 2;
  CLIENT_GOODBYE_REASON_TERMINATING = 3;
}

message ClientGoodbye {
  uint64 client_id = 1;
  ClientGoodbyeReason reason = 2;
}

message ClientToServer {
  oneof message {
    ClientInit client_init = 1;
    ClientGoodbye client_goodbye = 2;
  }
}

message ServerInit {
  uint64 client_id = 1;
  string server_name = 2;
  common.DisplayConfiguration display_configuration = 3;
  map<uint64, tunnel.Response> tunnel_responses = 4;
}

enum ServerGoodbyeReason {
  SERVER_GOODBYE_UNSPECIFIED = 0;
  SERVER_GOODBYE_REASON_SHUTTING_DOWN = 1;
  SERVER_GOODBYE_REASON_NETWORK_ERROR = 2;
  SERVER_GOODBYE_REASON_PROCESS_EXITED = 3;
  SERVER_GOODBYE_REASON_INTERNAL_ERROR = 4;
  SERVER_GOODBYE_REASON_AUTHENTICATION_FAILURE = 5;
  SERVER_GOODBYE_REASON_INVALID_CONFIGURATION = 6;
  SERVER_GOODBYE_REASON_PROCESS_LAUNCH_FAILED = 7;
  SERVER_GOODBYE_REASON_CLIENT_EXEC_DISALLOWED = 8;
  SERVER_GOODBYE_REASON_OTHER_LOGIN = 9;
  SERVER_GOODBYE_REASON_INACTIVE_TIMEOUT = 10;
}

message ServerGoodbye { ServerGoodbyeReason reason = 1; }

message ServerToClient {
  oneof message {
    ServerInit server_init = 1;
    ServerGoodbye server_goodbye = 2;
  }
}
